--- a/.codespellrc
+++ b/.codespellrc
@@ -1,3 +1,3 @@
 [codespell]
-skip = tests/unit/catch.hpp,*.fastq,*.json
+skip = tests/unit/catch.hpp,*.fastq,*.json,*.sam
 builtin = clear,rare,informal,names
