--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -56,23 +56,23 @@ jobs:
         run: uv pip install meson ninja jsonschema sphinx
 
       - name: setup
-        run: meson setup build -Db_sanitize=address,undefined -Db_coverage=${{ matrix.coverage }}
+        run: make setup DEBUG=true SANITIZE=true COVERAGE=${{ matrix.coverage }}
 
       - name: install
-        run: DESTDIR=${PWD}/install meson install -C build
+        run: make install DESTDIR=${PWD}/install
 
       - name: examples
         run: make -C examples EXE=${PWD}/build/src/adapterremoval3
 
       - name: regression tests
-        run: meson test -C build --suite regression --print-errorlogs
+        run: make regression
 
       # Unit tests are run last to enable cleanup of coverage data from other
       # actions before running coveralls
       - name: unit tests
         run: |
           find . -name '*.gcda' -print -delete
-          meson test -C build --suite unit --print-errorlogs
+          make test
 
       - name: coveralls
         if: ${{ matrix.coverage == 'true' && github.event_name == 'push' }}
