rework debug serialization
- Patch catch2 to disable the built-in stringification of objects with
  begin()/end() functions, to prevent complex objects from being mangled
- Specify custom fallbackStringifier function, that uses a StringStream.
  This ensures that support for strinfication is present when tests are
  written, rather than objects being emitted as "{?}"
- Replace existing StringMaker implementations with operator<< functions
- Add tests for these functions

--- a/src/meson.build
+++ b/src/meson.build
@@ -89,6 +89,7 @@ libcore = static_library(
     'managed_io.cpp',
     'mathutils.cpp',
     'sequence_sets.cpp',
+    'sequence.cpp',
     'serializer.cpp',
     'simd_std.cpp',
     'simd.cpp',
