--- a/.github/workflows/sonar-cube.yaml
+++ b/.github/workflows/sonar-cube.yaml
@@ -25,7 +25,7 @@ jobs:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
       - name: dependencies
-        run: sudo apt-get install -y libisal-dev libdeflate-dev meson ninja
+        run: sudo apt-get install -y libisal-dev libdeflate-dev meson ninja-build
 
       - name: setup
         run: make setup DEBUG=true
