rework of sample sequences
* split out read_group into its own files
* split unit tests into files by class
* improvements to doc comments
* various minor refactors and lints
* many additional unit tests

--- a/tests/unit/meson.build
+++ b/tests/unit/meson.build
@@ -16,7 +16,10 @@ unit_tests = executable(
     'logging_test.cpp',
     'main_test.cpp',
     'mathutils_test.cpp',
-    'sequence_sets_test.cpp',
+    'read_group_test.cpp',
+    'sequence_sets' / 'adapter_set_test.cpp',
+    'sequence_sets' / 'sample_set_test.cpp',
+    'sequence_sets' / 'sample_test.cpp',
     'sequence_test.cpp',
     'serializer_test.cpp',
     'strutils_test.cpp',
