gather phred<->p code and fix reported mott value

--- a/tests/unit/meson.build
+++ b/tests/unit/meson.build
@@ -10,6 +10,7 @@ unit_tests = executable(
     'counts_test.cpp',
     'debug_test.cpp',
     'errors_test.cpp',
+    'fastq_enc_test.cpp',
     'fastq_test.cpp',
     'json_test.cpp',
     'linereader_test.cpp',
