enable -Wshadow-local and fix warnings

--- a/meson.build
+++ b/meson.build
@@ -53,6 +53,7 @@ add_project_arguments(
         '-Woverloaded-virtual',
         '-Wpedantic',
         '-Wredundant-decls',
+        '-Wshadow-local',
         '-Wsign-promo',
         '-Wstrict-overflow=2',
         '-Wswitch-default', # Require a default: statement in a switch, to catch corruption
