add workaround for OSX

--- a/meson.build
+++ b/meson.build
@@ -84,6 +84,8 @@ harden = get_option('harden')
 if harden
     add_project_arguments(
         compiler.get_supported_arguments(
+            # Workaround for systems where _FORTIFY_SOURCE is defined by default
+            '-U_FORTIFY_SOURCE',
             '-D_FORTIFY_SOURCE=3',
             '-D_GLIBCXX_ASSERTIONS',
             '-fPIE',
