enable hardening by default (#138)
This comes at a small performance cost, but it is expected that many
distros will be enabling similar flags by default.

Flags updated (mostly) based on -fhardening

--- a/meson.build
+++ b/meson.build
@@ -84,10 +84,15 @@ harden = get_option('harden')
 if harden
     add_project_arguments(
         compiler.get_supported_arguments(
-            '-D_FORTIFY_SOURCE=2',
+            # Workaround for systems where _FORTIFY_SOURCE is defined by default
+            '-U_FORTIFY_SOURCE',
+            '-D_FORTIFY_SOURCE=3',
+            '-D_GLIBCXX_ASSERTIONS',
             '-fPIE',
-            '-fstack-protector-all',
+            '-fcf-protection=full',
             '-fstack-clash-protection',
+            '-fstack-protector-strong',
+            '-ftrivial-auto-var-init=zero',
         ),
         language: 'cpp',
     )
