add class thread-safe read/write access to data
This adds the `threadsafe_data` class, which provides shared readers
and exclusive writers to underlying data. This is intended for
complex configuration that may be modified at runtime.

The `threadstate` class is moved to the same header.

--- a/tests/unit/meson.build
+++ b/tests/unit/meson.build
@@ -18,7 +18,6 @@ unit_tests = executable(
     'main_test.cpp',
     'mathutils_test.cpp',
     'read_group_test.cpp',
-    'scheduler_test.cpp',
     'sequence_sets' / 'adapter_set_test.cpp',
     'sequence_sets' / 'common_test.cpp',
     'sequence_sets' / 'sample_set_test.cpp',
@@ -28,6 +27,7 @@ unit_tests = executable(
     'strutils_test.cpp',
     'testing_test.cpp',
     'testing.cpp',
+    'threading_test.cpp',
     'utilities_test.cpp',
     config_inc,
     link_with: [libcore, libsimd],
