enable gcov threading, exclude non-code lines

--- a/gcovr.cfg
+++ b/gcovr.cfg
@@ -4,3 +4,5 @@ exclude = src/robin_hood.hpp
 exclude-unreachable-branches = yes
 exclude-throw-branches = yes
 exclude-lines-by-pattern = .*\s+AR_FAIL\(.*
+exclude-noncode-lines = yes
+gcov-parallel = yes
