--- a/tests/unit/meson.build
+++ b/tests/unit/meson.build
@@ -3,6 +3,7 @@
 
 unit_tests = executable(
     'unit_tests',
+    'adapter_database_test.cpp',
     'alignment_test.cpp',
     'argparse_test.cpp',
     'barcodes_test.cpp',
