add workflow steps for auto-selecting adapters
This does not yet implement bypassing of the workflow once it is done

--- a/src/meson.build
+++ b/src/meson.build
@@ -78,6 +78,7 @@ libcore = static_library(
     'core',
     'adapter_database.cpp',
     'adapter_detector.cpp',
+    'adapter_selector.cpp',
     'alignment.cpp',
     'argparse.cpp',
     'barcode_table.cpp',
@@ -91,6 +92,7 @@ libcore = static_library(
     'managed_io.cpp',
     'mathutils.cpp',
     'read_group.cpp',
+    'scheduler.cpp',
     'sequence_sets.cpp',
     'sequence.cpp',
     'serializer.cpp',
@@ -110,16 +112,15 @@ exe = executable(
     'demultiplexing.cpp',
     'fastq_io.cpp',
     'linereader_joined.cpp',
-    'main.cpp',
     'main_adapter_id.cpp',
     'main_adapter_rm.cpp',
     'main_benchmark.cpp',
+    'main.cpp',
     'output.cpp',
     'progress.cpp',
     'reports_html.cpp',
     'reports_json.cpp',
     'reports_terminal.cpp',
-    'scheduler.cpp',
     'statistics.cpp',
     'timer.cpp',
     'trimming.cpp',
