use human readable timestamps in HTML reports

--- a/src/meson.build
+++ b/src/meson.build
@@ -100,6 +100,7 @@ libcore = static_library(
     'simd.cpp',
     'strutils.cpp',
     'table_reader.cpp',
+    'timeutils.cpp',
     'utilities.cpp',
     config_inc,
     dependencies: [libdeflate, libisal, libmimalloc, libthreads],
