rename and move declarations to main.hpp
- Removes several unused delcarations
- Renames `identify_adapter_sequences` to `generate_reports`

--- a/src/meson.build
+++ b/src/meson.build
@@ -125,9 +125,9 @@ exe = executable(
     'demultiplexing.cpp',
     'fastq_io.cpp',
     'linereader_joined.cpp',
-    'main_adapter_id.cpp',
     'main_adapter_rm.cpp',
     'main_benchmark.cpp',
+    'main_reports.cpp',
     'main.cpp',
     'output.cpp',
     'progress.cpp',
