--- a/src/meson.build
+++ b/src/meson.build
@@ -116,7 +116,7 @@ libcore = static_library(
     'utilities.cpp',
     config_inc,
     version_cpp,
-    dependencies: [libdeflate, libisal, libmimalloc, libthreads],
+    dependencies: [libdeflate, libisal, libmimalloc, libthreads, libcppfs],
 )
 
 exe = executable(
@@ -142,6 +142,6 @@ exe = executable(
     html_template,
     config_inc,
     link_with: [libcore, libsimd],
-    dependencies: [libdeflate, libisal, libmimalloc, libthreads],
+    dependencies: [libdeflate, libisal, libmimalloc, libthreads, libcppfs],
     install: true,
 )
